2005-03-11  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (rd_r): Fixed index prefix.
	* z80asm.c (assemble): Fixed register count errors.

2004-10-01  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm (rd_comma): Fixed possible buffer overflow.
	* z80asm (parse_commandline): Improved --help output.
	* z80asm (new_reference): Removed useless ++.
	* z80asm (wrt_ref, assemble): Improved list output for ds.

2004-10-01  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (enum mnemonic, mnemonics, assemble): Added dm/defm as an
	alias for db/defb.
	* README: Updated documentation accordingly.
	* z80asm.c (write_one_byte, wrtb, new_reference, wrt_ref, assemble):
	Fixed bug regarding addr increments.

2004-09-29  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: added global variable labelprefix.
	* z80asm.c (parse_commandline, assemble): Support prefixing labels.
	* z80asm.c (assemble): fixed bug in label output.

2004-09-29  H. Peter Anvin  <hpa@users.sourceforge.net>

	* Makefile: Fixed "make clean", removed -Werror for cygwin.
	* z80asm.c (rd_out): implemented out (c),0.

2004-09-28  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (rd_number): Added ouput parameter endptr.  Changed all
	callers.
	* z80asm.c (rd_value): Added support for Zilog-style base
	specification.
	* README: Updated documentation.

2004-09-22  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (assemble): Bugfixes to make ld (nn),a and ld sp,nn work.

2003-11-19  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Changed expression handling, bugfixes.
	
2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added binary output as hex to listfile.

2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added support for quoted strings in defb, added comments,
	added long option support and help/version information.
	* README: Updated documentation.

2002-05-15  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (rd_expr): Added equations in expr and bugfix